# codebuff

./: AGENTS.md  LICENSE  package.json  requirement.md
.trae/documents/: ag-ui-codebuff-strengthening-plan.md  koncovibe-easy-improvements.md
agents/: base-chat.ts  context-pruner.ts
agents/base2/: base2-free-glm.ts  base2.ts
agents/researcher/: researcher-web.ts
agents/reviewer/: code-reviewer-glm.ts
apps/desktop/: .env.example  CHANGELOG.md  index.html  package.json  vite.config.ts
apps/desktop/.agents/: mcp.json
apps/desktop/scripts/: build-sidecar.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-sidecar/: agui-event-mapper.ts  index.ts  interrupt-bridge.ts  json-rpc.ts  stream-chunk-handler.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
cli/release/: index.js  package.json
cli/release-staging/: http.js  index.js
cli/scripts/: build-binary.ts  smoke-binary.ts
cli/src/: app.tsx  chat.tsx
cli/src/__tests__/: project-files-chat-id.test.ts
cli/src/commands/: command-registry.ts
cli/src/components/: chat-header.tsx  chat-history-screen.tsx  copy-button.tsx  freebuff-model-selector.tsx  freebuff-referral-banner.tsx  limited-landing-panel.tsx  (+1 more)
common/src/: env-schema.ts
docs/: ARCHITECTURE.md  HANDOFF.md
evals/buffbench/: eval-codebuff-hard.json  eval-codebuff.json  eval-codebuff2.json  eval-manifold.json
scripts/: local-backend.ts
sdk/src/: index.ts  run.ts
(+87 files in other folders)
