[package]
name = "koncovibe"
version = "1.0.0"
description = "KoncoVibe — AI Vibe Coding Studio Desktop"
authors = ["KoncoWeb"]
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "koncovibe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"

[features]
# This feature is used for production builds or when `devUrl` is not specified.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
